<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">RC Throwmeter</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">rc-throwmeter@gmail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="raw_data" translatable="false">Data</string>
    <string name="euler_pitch" translatable="false">Euler pitch</string>
    <string name="euler_roll" translatable="false">Euler roll</string>
    <string name="euler_yaw" translatable="false">Euler yaw</string>
    <string name="txt_bt_status" translatable="false">BTStatus</string>
    <string name="txt_action_settings">Settings</string>
    <string name="txt_sensor_bt">BT Sensors</string>
    <string name="txt_throw_meter">Throw meter</string>
    <string name="txt_communicate">Communicate</string>
    <string name="txt_reset_angle">Reset/Calib</string>
    <string name="txt_calibrate">Calibrate</string>
    <string name="txt_command_throw">Travel</string>
    <string name="txt_command_angle">Angle (\u00B0)</string>
    <string name="txt_title_paired_devices">Paired device</string>
    <string name="txt_title_other_devices">Other device</string>
    <string name="txt_button_scan">Scan</string>
    <string name="txt_command_maxthrow">Max UP/DOWN</string>
    <string name="txt_max_travels">Max travels</string>
    <string name="txt_set_max_travels">Max</string>
    <string name="txt_set_min_travels">Min</string>
    <string name="txt_button_select">Select</string>
    <string name="txt_chord">Rudder Chord</string>
    <string name="txt_dlg_cancel">Cancel</string>
    <string name="txt_dlg_max_positive_travel">Max positive travel"</string>
    <string name="txt_dlg_min_negative_travel">Min negative travel"</string>
    <string name="txt_dlg_calibrate">Sensor calibration</string>
    <string name="txt_dlg_calibrate_desc">Keep sensor horizontal and do not move</string>
    <string name="txt_warning_bluetooth_not_enabled">Bluetooth was not enabled.</string>
    <string name="txt_travel">Travel</string>
    <string name="txt_settings_head">Tools</string>
    <string name="txt_preferences">Preferences</string>
    <string name="txt_use_xy_axes_default">Use XY axes (default)</string>
    <string name="txt_use_xyz_axes">Use XYZ axes</string>
    <string name="txt_display">Display</string>
    <string name="txt_sensor_settings">Sensor Settings</string>
    <string name="txt_remind_sensor_power">Do not forget to switch OFF the WitMotion Sensor(s)</string>
    <string name="txt_closing">Exit</string>
    <string name="txt_notify_nearby_devices">A required app permission has been denied. Please grant \'Nearby devices\' permission in the Android \'App permissions\' menu or reinstall the app. In rare cases, it might be useful to deactivate this check with \'IGNORE\' (at your own risk).</string>
    <string name="txt_missing_permission">Missing permissions for </string>
    <string name="txt_use_AUTO_default">Auto-Detect (default)</string>
    <string name="txt_use_BWT61CL">BWT61CL</string>
    <string name="txt_sensor_axes">Axes</string>
    <string name="txt_sensor_model">WitMotion Sensor Model</string>
    <string name="txt_dlg_bt_settings">Configure WitMotion Sensor</string>
    <string name="txt_dlg_bt_settings_desc">Send configuration parameters to Witmotion for use with RC Throwmeter</string>
    <string name="txt_use_BWT901CL">BWT901CL</string>
    <string name="txt_sensor_config">Send Sensor Configuration</string>
    <string name="txt_use_config_AUTO">Automatic (default)</string>
    <string name="txt_use_config_MANUAL">Manual</string>
    <string name="txt_calc_method">Throw Calculation Method</string>
    <string name="txt_use_ortho_default">Orthogonal deflection (default)</string>
    <string name="txt_use_chord">Chord length</string>
    <string name="txt_diffButton">Diff</string>
</resources>
