<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/txt_display">
        <menu>
            <item
                android:id="@+id/nav_throwmeter"
                android:icon="@drawable/ic_tune"
                android:title="@string/txt_throw_meter" />
        </menu>
    </item>

    <item android:title="@string/txt_communicate">
        <menu>
            <item
                android:id="@+id/nav_BT"
                android:icon="@drawable/ic_bluetooth"
                android:title="@string/txt_sensor_bt" />
        </menu>
    </item>

    <item android:title="@string/txt_settings_head">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/txt_preferences" />
        </menu>
    </item>

</menu>
