<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textSize="28dp"
    tools:context=".MainSettings">

    <TextView
        android:id="@+id/textSensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/txt_sensor_settings"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textSensor">

        <RadioButton
            android:id="@+id/prefsSensorNoZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onRadioButtonClicked1"
            android:text="@string/txt_use_xy_axes_default"
            android:textSize="18dp" />

        <RadioButton
            android:id="@+id/prefsSensorAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="onRadioButtonClicked2"
            android:text="@string/txt_use_xyz_axes"
            android:textSize="18dp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>