<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout">

    <data>
        <variable
            name="CommandthrowViewModel"
            type="com.pitchgauge.j9pr.pitchgauge.ThrowGaugeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/status_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textInputLayout">

                <Button
                    android:id="@+id/buttonBTStatus"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@{CommandthrowViewModel.btStatusColor}"
                    android:gravity="center|center_horizontal"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:enabled="@{CommandthrowViewModel.buttonBTStatusEnable}"
                    android:text="@{CommandthrowViewModel.btStatus}"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    tools:layout_editor_absoluteX="6dp"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:id="@+id/buttonBTStatus2"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@{CommandthrowViewModel.btStatusColor2}"
                    android:gravity="center|center_horizontal"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    android:enabled="@{CommandthrowViewModel.buttonBTStatus2Enable}"
                    android:text="@{CommandthrowViewModel.btStatus2}"
                    android:visibility="@{CommandthrowViewModel.secondSensorVisible}"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:textAllCaps="false"
                    tools:layout_editor_absoluteX="6dp"
                    style="?android:attr/buttonBarButtonStyle" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/outAngelLabel"
                app:layout_constraintVertical_chainStyle="spread_inside">

                <TextView
                    android:id="@+id/inChord"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_chord"
                    android:minWidth="160dp"
                    android:textSize="17sp"
                    android:paddingTop="0dp"
                    android:paddingBottom="0dp"
                    />
                <Button
                    android:id="@+id/inChordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/btn_rounded_back"
                    android:gravity="center"
                    android:minWidth="160dp"
                    android:text="@={CommandthrowViewModel.chordValue}"
                    android:textAllCaps="false"
                    android:textSize="17sp" />


            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/outAngelLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/txt_command_angle"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

            <LinearLayout
                android:id="@+id/angle_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outAngelLabel">

                <TextView
                    android:id="@+id/inAngle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_weight="6"
                    android:background="@drawable/rounded_back"
                    android:gravity="center|center_horizontal"
                    android:padding="2dp"
                    android:text="@{CommandthrowViewModel.Angle}"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/inAngleDiff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="7"
                    android:background="@drawable/rounded_back"
                    android:gravity="center|center_horizontal"
                    android:padding="0dp"
                    android:text="@{CommandthrowViewModel.AngleDiff}"
                    android:textSize="20sp"
                    android:visibility="@{CommandthrowViewModel.diffVisible}" />

                <TextView
                    android:id="@+id/inAngle2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_weight="6"
                    android:background="@drawable/rounded_back"
                    android:gravity="center|center_horizontal"
                    android:padding="2dp"
                    android:text="@{CommandthrowViewModel.Angle2}"
                    android:visibility="@{CommandthrowViewModel.secondSensorVisible}"
                    android:textSize="34sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/outTravelLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="@string/txt_travel"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/travel_container"
                app:layout_constraintTop_toBottomOf="@+id/angle_container" />

            <LinearLayout
                android:id="@+id/travel_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/maxTravelsUP"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outTravelLabel">

                <TextView
                    android:id="@+id/outTravel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_weight="6"
                    android:background="@{CommandthrowViewModel.TravelColor}"
                    android:gravity="center|center_horizontal"
                    android:padding="2dp"
                    android:text="@{CommandthrowViewModel.Travel}"
                    android:textColor="@android:color/white"
                    android:textSize="34sp" />

                <TextView
                    android:id="@+id/inTravelDiff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:layout_weight="7"
                    android:background="@drawable/rounded_back"
                    android:gravity="center|center_horizontal"
                    android:padding="0dp"
                    android:text="@{CommandthrowViewModel.TravelDiff}"
                    android:textSize="20sp"
                    android:visibility="@{CommandthrowViewModel.diffVisible}" />

                <TextView
                    android:id="@+id/outTravel2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="6dp"
                    android:layout_weight="6"
                    android:background="@{CommandthrowViewModel.TravelColor2}"
                    android:gravity="center|center_horizontal"
                    android:padding="2dp"
                    android:text="@{CommandthrowViewModel.Travel2}"
                    android:visibility="@{CommandthrowViewModel.secondSensorVisible}"
                    android:textColor="@android:color/white"
                    android:textSize="34sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/maxTravelsUP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"

                android:text="@string/txt_command_maxthrow"
                android:textSize="17sp"
                app:layout_constraintBottom_toTopOf="@+id/inMaxThrow_container"
                app:layout_constraintTop_toBottomOf="@+id/travel_container" />

            <LinearLayout
                android:id="@+id/inMaxThrow_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="2dp"
                app:layout_constraintBottom_toTopOf="@+id/inMinThrow_container"
                app:layout_constraintTop_toBottomOf="@+id/maxTravelsUP">

                <TextView
                    android:id="@+id/inMaxThrow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_back"
                    android:gravity="center"
                    android:text="@{CommandthrowViewModel.MaxTravel}"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/inMaxThrow2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_back"
                    android:gravity="center"
                    android:text="@{CommandthrowViewModel.MaxTravel2}"
                    android:visibility="@{CommandthrowViewModel.secondSensorVisible}"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonSetMaxTravel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_rounded_back"
                    android:gravity="center"
                    android:text="@{CommandthrowViewModel.MaxTravelSet}"
                    android:textAllCaps="false"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/inMinThrow_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="2dp"
                app:layout_constraintTop_toBottomOf="@+id/inMaxThrow_container">


                <TextView
                    android:id="@+id/inMinThrow"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_back"
                    android:gravity="center"
                    android:text="@{CommandthrowViewModel.MinTravel}"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/inMinThrow2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_back"
                    android:gravity="center"
                    android:text="@{CommandthrowViewModel.MinTravel2}"
                    android:visibility="@{CommandthrowViewModel.secondSensorVisible}"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/buttonSetMinTravel"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_rounded_back"
                    android:gravity="center"
                    android:text="@{CommandthrowViewModel.MinTravelSet}"
                    android:textAllCaps="false"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/inReset_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingStart="2dp"
                android:paddingEnd="2dp"
                app:layout_constraintTop_toBottomOf="@+id/inMinThrow_container">

                <TextView
                    android:id="@+id/inPlaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="4"
                    android:gravity="center"
                    android:visibility="invisible"
                    android:textSize="24sp" />

               <Button
                    android:id="@+id/buttonResetAngle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="3"
                    android:background="@drawable/btn_rounded_back"
                    android:gravity="center"
                    android:onClick="@{()-> CommandthrowViewModel.onResetAngleClicked()}"
                    android:enabled="@{CommandthrowViewModel.buttonResetAngleEnable}"
                    android:text="@string/txt_reset_angle"
                    android:textAllCaps="false"
                    android:textSize="17sp" />

                <Button
                    android:id="@+id/buttonShowDiff"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="12dp"
                    android:layout_weight="4"
                    android:background="@drawable/btn_rounded_back"
                    android:gravity="center"
                    android:text="@string/txt_diffButton"
                    android:visibility="@{CommandthrowViewModel.diffButtonVisible}"
                    android:textAllCaps="false"
                    android:textSize="17sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>